# apto

./: .gitignore  LICENSE  README.md  build.xml
Apto.xcodeproj/: project.pbxproj
framework/resources/: Apto-OSX-Info.plist  License.rtf
framework/src/core/: Apto_Core.h  NSString+Apto.h  NSString+Apto.mm
framework/src/ios/: Apto.h  Prefix.pch
framework/src/osx/: Apto.h  AptoDocumentPositioningView.h  AptoDocumentPositioningView.m  AptoHierarchicalNavigationBar.h  AptoHierarchicalNavigationBar.mm  AptoNavigationBar.h  AptoNavigationBar.mm  AptoSourceList.h  AptoSourceList.mm  AptoSourceListDataSource.h  AptoSourceListDelegate.h  NSScrollView+Apto.h  NSScrollView+Apto.m  Prefix.pch
include/apto/: core.h  malloc.h  platform.h  rng.h  scheduler.h  stat.h
include/apto/core/: Algorithms.h  Array.h  ArrayMap.h  ArraySet.h  ArrayStorage.h  ArrayUtils.h  Atomic.h  ConditionVariable.h  Definitions.h  EntryHandle.h  FileSystem.h  Functor.h  HierarchyGeneration.h  Iterator.h  List.h  ListStorage.h  Malloc.h  ManagedPointerArray.h  Map.h  MapStorage.h  Matrix.h  MatrixStorage.h  Mutex.h  Pair.h  PriorityScheduler.h  RWLock.h  Random.h  RefCount.h  Set.h  Singleton.h  SmartArray.h  SmartPtr.h  SparseVectorList.h  StaticCheck.h  String.h  StringBuffer.h  StringUtils.h  Thread.h  ThreadSpecific.h  ThreadingModel.h  (+4 more)
include/apto/malloc/: FixedSegment.h  TCFreeList.h
include/apto/platform/: FloatingPoint.h  Platform.h  Visibility.h
include/apto/rng/: AvidaRNG.h
include/apto/scheduler/: Integrated.h  Probabilistic.h  RoundRobin.h  (+2 more)
src/: CMakeLists.txt
src/core/: EntryHandle.cc  FileSystem.cc  PriorityScheduler.cc  Random.cc  RefCount.cc  String.cc  Thread.cc
src/platform/: FileSystem.cc  Platform.cc
src/rng/: AvidaRNG.cc
src/scheduler/: Integrated.cc  Probabilistic.cc  ProbabilisticIntegrated.cc  RoundRobin.cc
src/stat/: FishersExact.cc
unittests/: CMakeLists.txt  main.cc
unittests/core/: Algorithms.cc  Array.cc  ArrayUtils.cc  ConditionVariable.cc  FileSystem.cc  Functor.cc  List.cc  Malloc.cc  Map.cc  Matrix.cc  Mutex.cc  Pair.cc  RWLock.cc  Set.cc  SmartPtr.cc  String.cc  StringBuffer.cc  StringUtils.cc  Thread.cc  ThreadSpecific.cc
unittests/malloc/: FixedSegment.cc  TCFreeList.cc
unittests/stat/: Accumulator.cc  Functions.cc
utils/fexact/: main.cc
(+8 files in other folders)
